src/bootstrap/test/v0_7/rejects/06_select_two_defaults/main.zg
# requires: v0.7

fn main() {
    let ch := chan[int](1)
    select {
        v := <- ch -> { print v }
        _ -> { print 1 }
        _ -> { print 2 }
    }
}

main()
